--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,47 +1,54 @@
-# Запускать в качестве менее привилегированного пользователя по соображениям безопасности..
+
 user nginx;
+worker_processes auto;
 
-# Значение auto устанавливает число максимально доступных ядер CPU,
-# чтобы обеспечить лучшую производительность.
-worker_processes    auto;
+error_log /var/log/nginx/error.log notice;
+pid /var/run/nginx.pid;
 
-events { worker_connections 1024; }
+
+events {
+    worker_connections 1024;
+}
+
 
 http {
-    server {
-        # Hide nginx version information.
-        server_tokens off;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
 
-        listen  80;
-        root    /usr/share/nginx/html;
-        include /etc/nginx/mime.types;
+    log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+    '$status $body_bytes_sent "$http_referer" '
+    '"$http_user_agent" "$http_x_forwarded_for"';
+
+    access_log /var/log/nginx/access.log main;
+
+    sendfile on;
+    #tcp_nopush     on;
+
+    keepalive_timeout 65;
+
+    #gzip  on;
+
+    server {
+        listen 80;
+        listen [::]:80;
+        server_name localhost;
+
+        #access_log  /var/log/nginx/host.access.log  main;
 
         location / {
-            try_files $uri $uri/ /index.html;
+            root /var/www/nginx/html;
+            index index.html index.htm;
         }
 
-        gzip            on;
-        gzip_vary       on;
-        gzip_http_version  1.0;
-        gzip_comp_level 5;
-        gzip_types
-                        application/atom+xml
-                        application/javascript
-                        application/json
-                        application/rss+xml
-                        application/vnd.ms-fontobject
-                        application/x-font-ttf
-                        application/x-web-app-manifest+json
-                        application/xhtml+xml
-                        application/xml
-                        font/opentype
-                        image/svg+xml
-                        image/x-icon
-                        text/css
-                        text/plain
-                        text/x-component;
-        gzip_proxied    no-cache no-store private expired auth;
-        gzip_min_length 256;
-        gunzip          on;
+        #error_page  404              /404.html;
+
+        # redirect server error pages to the static page /50x.html
+        #
+        error_page 500 502 503 504 /50x.html;
+        location = /50x.html {
+            root /var/www/nginx/html;
+        }
+
     }
+
 }
